# core_model_macros

./: .cursorrules  .gitignore  CURSORRULES.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: field_type.rs  lib.rs  model_schema.rs  utils.rs
src/features/: jsonschema.rs  mod.rs  model_schema_prop.rs  object_id.rs  serde.rs  zod.rs
src/generation/: mod.rs  typescript.rs
tests/: advanced_tests.rs  basic_tests.rs  collection_tests.rs  edge_cases_tests.rs  enum_tests.rs  macro_tests.rs  model_schema_prop_tests.rs  mongodb_real_tests.rs  mongodb_tests.rs  primitive_types_tests.rs  serde_tests.rs  typescript_feature_tests.rs
