[package]
name = "core_model_macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for core models in Tixena applications"
license = "Proprietary"
readme = "README.md"
repository = "https://github.com/tixena/tixena"
categories = ["development-tools::procedural-macros"]
keywords = ["macros", "proc-macro", "model", "tixena"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
log = "0.4.27"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"


[features]
default = []
