[package]
name = "core_model_macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for generating TypeScript types and Zod v4 schemas from Rust structs and enums, with MongoDB ObjectId support"
license = "Proprietary"
readme = "README.md"
repository = "https://github.com/tixena/tixena"
categories = ["development-tools::procedural-macros"]
keywords = ["macros", "proc-macro", "typescript", "zod", "codegen"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
log = "0.4.27"

[dev-dependencies]
mongodb = "3.2.4"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"


[features]
default = ["serde", "zod", "jsonschema", "object_id", "typescript"]

# Core features
serde = []          # Serde integration for attribute parsing and field renaming
zod = []            # Zod schema generation alongside TypeScript types
jsonschema = []     # JSON schema generation methods
object_id = []      # MongoDB ObjectId type support
typescript = []     # TypeScript type generation and TypeScript-style Zod schemas

# Feature combinations for testing
minimal = []                           # No features - basic functionality only
basic = ["zod"]                       # Zod schemas only (JavaScript)
typescript_only = ["typescript"]      # TypeScript types only
typescript_zod = ["typescript", "zod"] # TypeScript + Zod schemas with TypeScript types
advanced = ["serde", "zod"]           # Serde + Zod without TypeScript
mongodb = ["serde", "zod", "object_id"] # MongoDB support without TypeScript
full_typescript = ["serde", "zod", "jsonschema", "object_id", "typescript"] # Full TypeScript support
